Generic sorting with the IdProjection class